BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Rep_Roster_vod__c.object
<CustomObject>
    <description>Roster of all Users for the organization.</description>
    <fields>
        <fullName>Address_Line_1_Secondary_BMS_SHARED__c</fullName>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_Tertiary_BMS_SHARED__c</fullName>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>First Line of the Address for the Rep.  The First Line of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the First Line of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_Secondary_BMS_SHARED__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_Tertiary_BMS_SHARED__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Second line of the Address for the Rep.  The Second Line of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the Second Line of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambient_Temp_Secondary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ambient-Temperature Sample Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambient_Temp_Tertiary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ambient-Temperature Sample Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA Feb-2014: created the field, used by any Region, sourced from the User Source Country field.</description>
        <formula>TEXT( Owner:User.User_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Employee_ID_BMS_SHARED__c</fullName>
        <formula>Owner:User.BMS_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Secondary_BMS_SHARED__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Tertiary_BMS_SHARED__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Address for the Rep.  The City of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the City of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_Secondary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cold-Chain Sample Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_Tertiary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cold-Chain Sample Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer_Asset_Tag__c</fullName>
        <description>Computer Asset Tag for the Rep.</description>
        <label>Computer Asset Tag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_BMS_SHARED__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Secondary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Tertiary_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <description>Fax Number of the Rep.</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home Phone Number for the Rep.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Primary_BMS_SHARED__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Secondary_BMS_SHARED__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Tertiary_BMS_SHARED__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Mobile Number for the Rep.</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Organization Id for the Rep.</description>
        <label>Organization Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Roster_Source_Country_BMS_CORE__c</fullName>
        <label>Rep Roster Source Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Secondary_BMS_SHARED__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Tertiary_BMS_SHARED__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Address for the Rep.  The State of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the State of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Comma-delimited list of Territories that Rep is assigned to.</description>
        <label>Territory</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username_External_Id_vod__c</fullName>
        <description>Username of the Rep that acts as an external id to facilitate data loading of a Rep Roster.  The Username External Id must match the Username for the Rep within the User object.  This Username External Id is used by the Lookup on a Transfer Sample Transaction to auto-populate the address of the selected Transfer To User.</description>
        <externalId>true</externalId>
        <label>Username External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN # of the car assigned to the Rep.</description>
        <label>VIN #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voicemail_Number_BMS_SHARED__c</fullName>
        <label>Voicemail Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Secondary_BMS_SHARED__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Tertiary_BMS_SHARED__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip of the Address for the Rep.  The Zip of the Address on Rep Roster is utilized for Transfer Transactions to auto-populate the Zip of the Address for a Transfer Sample Transaction based on the selected Transfer To User.</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Rep Roster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Rep_Roster</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Rep Roster</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Roster</pluralLabel>
    <recordTypes>
        <fullName>Rep_Roster_Canada</fullName>
        <active>true</active>
        <description>Used for BMS Canada to limit Province picklist</description>
        <label>Rep Roster Canada</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>